# cre8-mcp-ui

./: .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt  server.py  vercel.json
api/: index.py
cre8_mcp_ui/: __init__.py  build_ui_resource.py  dashboard.py
cre8_mcp_ui/assets/: page-shell-mcp-app.html  page-shell.html
harness/: .env.example  README.md  package-lock.json  package.json  serve.ts
tests/: test_build_ui_resource.py  test_dashboard.py
